# fastapi_first_app

first_app/: pyproject.toml
first_app/first_app/: __init__.py
